test/spec_vectors/f32/fail/module_4.wat
(module (func (result f32) (f32.min (i64.const 0) (f64.const 0))))